adicionadas opções de calcular os itens usados em instalações automaticamente

--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -61,12 +61,17 @@
                 <option value="Vidro">Vidro</option>
                 <option value="Ploter">Ploter</option>
                 <option value="Janela 4F">Janela 4F</option>
+                <option value="Portão Maior">Portão Maior</option>
+                <option value="Janela Pivotante">Janela Pivotante</option>
+                <option value="Jato de Areia">Jato de Areia</option>
+                <option value="Porta Pivotante">Porta Pivotane</option>
             </select>
 
             <select id="CorVidro" class="input-box texto-form">
                 <option value="" disabled selected>-----------</option>
                 <option value="Color">Color</option>
                 <option value="Fosco">Fosco</option>
+                <option value="Cromado">Cromado</option>
             </select>
 
         </div>
