--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -65,6 +65,8 @@
                 <option value="Janela Pivotante">Janela Pivotante</option>
                 <option value="Jato de Areia">Jato de Areia</option>
                 <option value="Porta Pivotante">Porta Pivotane</option>
+                <option value="Porta 2F">Porta 2F</option>
+
             </select>
 
             <select id="CorVidro" class="input-box texto-form">
