--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -60,13 +60,17 @@
             <select id="TipoVidro" class="input-box texto-form">
                 <option value="Vidro">Vidro</option>
                 <option value="Ploter">Ploter</option>
+                <option value="Janela 2F">Janela 2F</option>
                 <option value="Janela 4F">Janela 4F</option>
-                <option value="Portão Maior">Portão Maior</option>
+                <option value="Janela Maxiar">Janela Maxiar</option>
+                <option value="Portao Maior">Portão Maior</option>
                 <option value="Janela Pivotante">Janela Pivotante</option>
                 <option value="Jato de Areia">Jato de Areia</option>
-                <option value="Porta Pivotante">Porta Pivotane</option>
+                <option value="Porta Pivotante">Porta Pivotante</option>
                 <option value="Porta 2F">Porta 2F</option>
-
+                <option value="Porta 4F">Porta 4F</option>
+                <option value="Bascula">Bascula</option>
+                <option value="2 Portas Pivotantes">2 Portas Pivotantes</option>
             </select>
 
             <select id="CorVidro" class="input-box texto-form">
