--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -77,7 +77,7 @@
             <select id="CorVidro" class="input-box texto-form">
                 <option value="" disabled selected>-----------</option>
                 <option value="Color">Color</option>
-                <option value="Fosco">Fosco</option>
+                <option value="Fsc">Fosco</option>
                 <option value="Preto">Preto</option>
                 <option value="Cromado">Cromado</option>
             </select>
